--- a/UI/index.html
+++ b/UI/index.html
@@ -29,10 +29,10 @@
             </div>
             
             <div class="row">
-                <img src="icons/redirect.png" class="icon">
-                <p>Photon Redirect</p>
+                <img src="icons/image.png" class="icon">
+                <p>Clipboard Image Paste</p>
                 <label class="switch">
-                    <input type="checkbox" id="autoWithdraw">
+                    <input type="checkbox" id="imagePaste">
                     <span class="slider dark-slider"></span>
                 </label>
             </div>
