--- a/UI/help.html
+++ b/UI/help.html
@@ -25,10 +25,10 @@
                 </div>
             </div>
             <div class="feature">
-                <img src="icons/redirect.png" class="icon">
+                <img src="icons/image.png" class="icon">
                 <div>
-                    <p><strong>Photon Redirect</strong></p>
-                    <p>Auto-redirects to your coin's Photon chart upon creation</p>
+                    <p><strong>Clipboard Image Paste</strong></p>
+                    <p>Allows you to upload an image to your token by pasting it</p>
                 </div>
             </div>
             <div class="feature">
